--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nivo/circle-packing": "^0.88.0",
+    "@nivo/core": "^0.88.0",
+    "better-react-mathjax": "^2.1.0",
+    "d3": "^7.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0"
